2009-01-08  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.desktop.in.in: correct Categories.

	* applet/main.c: get rid of xsettings support.

	* applet/Makefile.am: likewise.

	* src/Makefile.am: likewise.

	* imsettings/Makefile.am: likewise.

	* configure.ac: likewise.

	* utils/imsettings-info.c (main): Fix a build issue.

2008-12-22  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: add AC_PROG_CXX.

2008-11-14  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (main): Disable immodule to prevent the event loop in
	itself. (Issue#22)

2008-11-05  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-restart.c (main): restart IM currently running
	if no arguments specified.

	* utils/imsettings-stop.c (main): stop IM currently running
	if no arguments specified.

	* utils/imsettings-start.c (main): start the default IM if no arguments
	specified.

	* data/none.in.in (QT_IM_MODULE): default to xim.

2008-10-28  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_xim_register_triggerkeys):
	do not discard the signal when imid is 0.

2008-10-23  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_set_ic_values): 
	Fix a freeze issue when focus out and reset the number of the forward
	event waiting for. this might be the race condition issue again. so it
	would be safe to append the request into the queue still.

2008-10-21  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_start_im): allow to start none
	without any warnings.

2008-10-12  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_disconnect_all): wait for finishing
	the reconnection before disconnecting the session.

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_parser_error):
	send back XIM_DESTROY_IC_REPLY instead of XIM_ERROR.

2008-10-11  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (_INC_PENDING): store imid and icid as well.